Fixes from release testing:
(1) Change 'alt text' to 'alternative text' in the Image RTE component.
(2) Change padding on the 'Continue' button.
(3) Make one-line text input fields submittable.
(4) Change rating stars from black to white.
(5) In editor preview mode, have the EndExploration interaction return the creator to the editor (and not the gallery).
(6) In the multiple-choice interaction, ensure that paragraph breaks do not cause the answer to appear below the radio button.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -58,8 +58,9 @@ md-input-group.md-default-theme label
 }
 
 .md-button.oppia-learner-continue-button {
-  color: #ffffff;
   background: #0D48A1;
+  color: #ffffff;
+  padding: 6px 12px;
 }
 
 button.md-button.md-default-theme.oppia-learner-continue-button:focus,
@@ -96,6 +97,16 @@ body {
   margin: 0 auto;
   padding: 0;
   width: 100%;
+}
+
+/*
+  This counteracts the increased line-height of 1.846 introduced by
+  angular-material.css.
+  TODO(sll): This is ugly. We should try not to have it, perhaps after
+  angular-material has been upgraded.
+*/
+html p, body p {
+  margin-top: -5px;
 }
 
 h1, h2 {
@@ -2012,6 +2023,9 @@ div#ng-curtain {
 
 .oppia-rating-star-active {
   color: #FFD700;
+}
+.oppia-rating-star-inactive {
+  color: #FFF;
 }
 
 .oppia-transition-200 {
